@@ -274,6 +274,7 @@ if( ! class_changer ) alert('no class_changer');
 <input name="jump_to" type="hidden">
 <input name="bulk_edit" value="<tmpl_var escape=html bulk_edit>" type="hidden">
 <input name="editor_insert_storylink_function" value="" type="hidden">
+<input name="filter_element" value="" type="hidden">
 <tmpl_if bulk_edit>
   <input name="bulk_edit_child" value="<tmpl_var escape=html bulk_edit_child>" type="hidden">
   <tmpl_if bulk_edit_sep><input name="bulk_edit_sep" value="<tmpl_var escape=html bulk_edit_sep>" type="hidden"></tmpl_if>
